--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,67 @@
 html,
 body {
-  margin: 0;
+  font-family: 'Rubik', sans-serif;
+  font-size: 16px;
   padding: 0;
-  font-size: 20px;
+  margin: 0;
 }
 
 .container {
-  background: #eef1f3;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 450px;
-  border: 4px solid #555;
-  border-radius: 10px;
-  padding: 5rem 0;
+  background: #eef1f3;
+  max-width: 320px;
+  border: 3px solid #584b42;
+  border-radius: 7px;
+  padding: 40px 20px;
   margin: 2rem auto;
 }
 
 #cat-in-cart {
-  width: 200px;
+  width: 170px;
+  margin: 0 auto;
 }
 
-#input-value {
+#input-field {
+  font-family: 'Rubik', sans-serif;
   color: #555;
   background: #dee4ec;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   text-align: center;
-  width: 76%;
-  height: 54px;
-  padding: 10px;
-  box-sizing: border-box;
-  border:none;
+  padding: 12px;
+  border: none;
   border-radius: 7px;
-  margin-top: 1rem;
-}
-
-#item-to-add::placeholder {
-  color: #9a9999;
+  margin: .5rem 0;
 }
 
 #add-btn {
+  font-family: 'Rubik', sans-serif;
   color: #eef1f3;
   background: #9c4c5e;
-  font-size: 1.2rem;
-  width: 76%;
-  height: 54px;
-  box-sizing: border-box;
+  font-family: inherit;
+  font-size: 1.1rem;
   border: none;
   border-radius: 7px;
-  margin-top: 1rem;
+  padding: 12px;
+  margin: 0;
+}
+
+#shopping-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  color: #473C35;
+  font-size: 1.1rem;
+  text-align: center;
+  list-style-type: none;
+  padding: .7rem 0;
+  margin: 0;
+}
+
+li {
+  background: #FFFDF8;
+  flex-grow: 1;
+  padding: 10px 20px;
+  border-radius: 12px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
 }
