--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ html,
 body {
   font-family: 'Rubik', sans-serif;
   font-size: 16px;
+  font-weight: 300;
+  text-align:center;
   padding: 0;
   margin: 0;
 }
@@ -61,7 +63,15 @@ body {
 li {
   background: #FFFDF8;
   flex-grow: 1;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 12px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+}
+
+.empty-list {
+  color: #444;
+  font-size: .95rem;
+  border-radius:unset;
+  box-shadow: unset;
+  background: unset;
 }
